--- a/README
+++ b/README
@@ -1,3 +1,7 @@
+This repo is now deprecated since HAProxy 2.4 and above now have the same features natively integrated. 
+
+
+
 Introduction
 ============
 
